--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ input, input:focus{
     border: none;
 }
 
+button, .btn{
+    cursor: pointer;
+}
+
 
 /* -----------------------------------------------------------------
     Style Page Header
@@ -144,7 +148,10 @@ input, input:focus{
     box-shadow: 0 0 25px 3px #2643c491;
 }
 
-/* Style Add Task Form */
+/* -----------------------------------------------------------------
+    Style Form to Add Tasks
+--------------------------------------------------------------------*/
+
 .add-sec .add-form{
     height:0;
     overflow:hidden;
