add the table of content

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,11 @@
 
     01. [Base (Global style for some elements)]
     02. [Style Page Header]
-    03. [Style Add Task Section]
+    03. [Style Add Tasks Section]
+    04ز [Style Form to Add Tasks]
+    05. [Style View Section]
+    06. [Style Tasks List Section]
+    07. [Style No Item Div]
 
 -----------------------------------------------------------------------------------*/
 
