--- a/css/media.css
+++ b/css/media.css
@@ -1,17 +1,1 @@
-/* Responsiv Mobile Screens */
-@media (max-width: 575.98px) { 
-    .add-sec .form.open-form{
-        height: 306px;
-    }
-
-    .add-sec .form .task-info{
-        display: flex;
-        flex-direction: column;
-    }
-
-    .add-sec .form .task-info .half-div{
-        width: 100%;
-        flex-basis: 100%;
-        margin: 0 0 1.1rem;
-    }
-}
+ @media (max-width: 575.98px) {.add-sec .form.open-form{height: 306px;}.add-sec .form .task-info{display: flex;flex-direction: column;}.add-sec .form .task-info .half-div{width: 100%;flex-basis: 100%;margin: 0 0 1.1rem;}}
