--- a/css/style.css
+++ b/css/style.css
@@ -1,414 +1,1 @@
-/*-----------------------------------------------------------------------------------
-
-    [Table of contents]
-
-    01. [Base (Global style for some elements)]
-    02. [Style Page Header]
-    03. [Style Add Tasks Section]
-    04ز [Style Form to Add Tasks]
-    05. [Style View Section]
-    06. [Style Tasks List Section]
-    07. [Style No Item Div]
-
------------------------------------------------------------------------------------*/
-
-/* -----------------------------------------------------------------
-    Global style for some elements
---------------------------------------------------------------------*/
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-/* Root - Variables*/
-:root{
-    --PraimaryColor: #D9DFF8;
-    --SecondaryColor: #041955;
-    --HeadingColor: #3D47AF;
-    --TextColor: #020417;
-    --InputColor: rgba(4, 26, 85, 0.51);
-    --ButtonColor: #2643C4;
-    --ButtonShadow: 0 0 15px 0px #2643c491;
-    --DangerButton: #ED5E68;
-    --DangerShadow: 0 0 15px 0px #ED5E6891;
-
-    --HeadingFont: 'Baloo 2', cursive;
-    --MainFont: 'Ubuntu', sans-serif;
-}
-
-html{
-    scroll-behavior: smooth;
-}
-.container{
-    min-height: 100.07vh;
-    background-color: var(--PraimaryColor);
-    padding: 45px 15px;
-    font-family: var(--MainFont);
-}
-
-button, button:focus, 
-input, input:focus{
-    outline: none;
-    border: none;
-}
-
-button, .btn{
-    cursor: pointer;
-}
-
-.icon{
-    pointer-events: none;
-}
-
-
-/* -----------------------------------------------------------------
-    Style Page Header
---------------------------------------------------------------------*/
-.page-header{
-    width: 100%;
-    max-width: 650px;
-    margin: auto;
-    margin-bottom: 3rem;
-    text-align: center;
-}
-
-.page-header .page-title{
-    font-family: var(--HeadingFont);
-    font-size: 35px;
-    color: var(--HeadingColor);
-    letter-spacing: 1px;
-}
-
-/* -----------------------------------------------------------------
-    Style Add Tasks Section
---------------------------------------------------------------------*/
-
-.page-main{
-    width: 100%;
-    max-width: 650px;
-    margin: auto;
-}
-
-.add-sec .sec-top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: var(--MainFont);
-    font-weight: 300;
-    margin-bottom: 1.2rem;
-}
-
-.add-sec .sec-top .sec-title{
-    color: #36334b;
-    letter-spacing: 1px;
-    font-size: 1.3rem;
-    margin-top: 3px;
-}
-
-.add-sec .sec-top .open-btn,
-.add-sec .sec-top .close-btn{
-    min-width: 127px;
-    padding: .7rem 1.5rem;
-    border-radius: .4rem;
-    background-color: var(--ButtonColor);
-    color: #FFF;
-    font-weight: 400;
-    font-size: .9rem;
-    box-shadow: var(--ButtonShadow);
-    cursor: pointer;
-    transition: .5s;
-}
-
-.add-sec .sec-top .close-btn{
-    display: none;
-}
-
-.add-sec .sec-top.edit-opened .open-btn{
-    display: none;
-}
-
-.add-sec .sec-top.edit-opened .close-btn{
-    display: inline-block;
-}
-
-.add-sec .sec-top .open-btn.close,
-.add-sec .sec-top .close-btn{
-    background-color: var(--DangerButton);
-    box-shadow: var(--DangerShadow);
-}
-
-.add-sec .sec-top .open-btn.close:hover,
-.add-sec .sec-top .close-btn:hover{
-    background-color: var(--DangerButton);
-    box-shadow: 0 0 25px 3px #ED5E6891;;
-}
-
-.add-sec .sec-top .open-btn .icon{
-    display: inline-block;
-    margin-right: 5px;
-}
-
-.add-sec .sec-top .open-btn .close-span{
-    display: none;
-}
-
-.add-sec .sec-top .open-btn.close .add-span{
-    display: none;
-}
-
-.add-sec .sec-top .open-btn.close .close-span,
-.add-sec .sec-top .close-btn .close-span{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.add-sec .sec-top .open-btn .add-span{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.add-sec .sec-top .open-btn:hover{
-    box-shadow: 0 0 25px 3px #2643c491;
-}
-
-/* -----------------------------------------------------------------
-    Style Form to Add Tasks
---------------------------------------------------------------------*/
-
-.add-sec .form{
-    height:0;
-    overflow:hidden;
-    transition:height .5s ease-out;
-    margin-bottom: 1.5rem;
-}
-
-.add-sec .form.open-form{
-    height: 220px;
-}
-
-.add-sec .form .task-title{
-    margin-bottom: 1.1rem;
-}
-
-.add-sec .form label{
-    display: inline-block;
-    margin-bottom: 5px;
-    padding: 0 3px;
-}
-
-.add-sec .form .inpt{
-    display: inline-block;
-    width: 100%;
-    min-height: 45px;
-    padding: .6rem 1rem;
-    border-radius: 5px;
-    border: 1px solid #0631f1;
-    background-color: #FFF;
-}
-
-.add-sec .form .task-info{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.add-sec .form .half-div{
-    flex-basis: 48%;
-    width: 48%;
-    min-width: 250px;
-    margin-bottom: 1.1rem;
-}
-
-.add-sec .form .half-div:first-child{
-    margin-right: 4%;
-}
-
-.add-sec .form .save-btn{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 45px;
-    background-color: var(--ButtonColor);
-    color: #FFF;
-    font-size: 1rem;
-    border-radius: .4rem;
-}
-
-.add-sec .form .save-btn .icon{
-    margin-right: 5px;
-}
-
-/* -----------------------------------------------------------------
-    Style View Section
---------------------------------------------------------------------*/
-.view-sec .tasks-info{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1.2rem;
-}
-
-.tasks-info .sec-title{
-    color: #8791b6;
-    letter-spacing: .5px;
-    font-size: 1.2rem;
-}
-
-.tasks-info .nums{
-    font-size: 1.2rem;
-    color: var(--ButtonColor);
-    font-weight: bold;
-}
-
-.tasks-info .nums .from{
-    display: inline-block;
-    margin: 0 5px;
-    font-weight: 500;
-    color: var(--HeadingColor);
-}
-
-
-/* -----------------------------------------------------------------
-    Style Tasks List Section
---------------------------------------------------------------------*/
-.view-sec .tasks-list{
-    list-style-type: none;
-}
-
-.tasks-list .single-task{
-    display: flex;
-    background-color: #FFF;
-    border-radius: 15px;
-    overflow: hidden;
-    margin: 10px 0;
-    transition: background-color .5s ease, opacity .7s ease;
-}
-
-.single-task.completed {
-    opacity: .4;
-}
-
-.tasks-list .single-task .done-btn {
-    flex-basis: 8%;
-    min-width: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    outline: none;
-    background: none;
-    border-right: 3px solid #D9DFF8;
-    font-size: 1.25rem;
-    cursor: pointer;
-    color: #2643C4;
-    padding: 7px;
-    transition: color .5s ease, border-right .5s ease;
-}
-
-.single-task .not-done-icon {
-    display: block;
-}
-
-.single-task .done-icon {
-    display: none;
-}
-
-.single-task.completed .not-done-icon {
-    display: none;
-}
-
-.single-task.completed .done-icon {
-    display: block;
-}
-
-.tasks-list .single-task .task-details {
-    flex-basis: 85%;
-    padding: 1.3rem 10px 7px;
-    border-right: 3px solid #D9DFF8;
-}
-
-.single-task .task-details .task-name {
-    letter-spacing: 1px;
-    margin-bottom: 0.3rem;
-    transition: border-right .5s ease;
-}
-
-.single-task.completed .task-details .task-name {
-    text-decoration: line-through;
-}
-
-.single-task .task-details .day-time{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    font-size: .9rem;
-}
-
-.single-task .task-details .day-time .day,
-.single-task .task-details .day-time .time{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.single-task .task-details .day-time .day{
-    margin-right: 0.6rem;
-}
-
-.single-task .task-details .day-time .icon{
-    color: var(--ButtonColor);
-    display: inline-block;
-    margin-right: 0.3rem;
-}
-
-.tasks-list .single-task .edit-btn, 
-.tasks-list .single-task .trash-btn {
-    flex-basis: 7%;
-    min-width: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    outline: none;
-    background: none;
-    color: #4b74ce;
-    font-size: 1.25rem;
-    cursor: pointer;
-    padding: 7px;
-    transition: color .5s ease;
-}
-
-.tasks-list .single-task .trash-btn {
-    border-left: 3px solid #D9DFF8;
-    color: #f03945;
-}
-
-/* -----------------------------------------------------------------
-    Style No Item Div
---------------------------------------------------------------------*/
-.view-sec .no-item{
-    margin-top: 3rem;
-    text-align: center;
-}
-
-.view-sec .no-item .image-div{
-    margin-bottom: 2.5rem;
-}
-
-.view-sec .no-item .image-div img{
-    width: 100%;
-    max-width: 300px;
-}
-
-.view-sec .no-item .title{
-    font-size: 1.8rem;
-    font-family: var(--HeadingFont);
-    color: var(--ButtonColor);
-}
-
+ *{padding: 0;margin: 0;box-sizing: border-box;}:root{--PraimaryColor: #D9DFF8;--SecondaryColor: #041955;--HeadingColor: #3D47AF;--TextColor: #020417;--InputColor: rgba(4, 26, 85, 0.51);--ButtonColor: #2643C4;--ButtonShadow: 0 0 15px 0px #2643c491;--DangerButton: #ED5E68;--DangerShadow: 0 0 15px 0px #ED5E6891;--HeadingFont: 'Baloo 2', cursive;--MainFont: 'Ubuntu', sans-serif;}html{scroll-behavior: smooth;}.container{min-height: 100.07vh;background-color: var(--PraimaryColor);padding: 45px 15px;font-family: var(--MainFont);}button, button:focus, input, input:focus{outline: none;border: none;}button, .btn{cursor: pointer;}.icon{pointer-events: none;}.page-header{width: 100%;max-width: 650px;margin: auto;margin-bottom: 3rem;text-align: center;}.page-header .page-title{font-family: var(--HeadingFont);font-size: 35px;color: var(--HeadingColor);letter-spacing: 1px;}.page-main{width: 100%;max-width: 650px;margin: auto;}.add-sec .sec-top{display: flex;justify-content: space-between;align-items: center;font-family: var(--MainFont);font-weight: 300;margin-bottom: 1.2rem;}.add-sec .sec-top .sec-title{color: #36334b;letter-spacing: 1px;font-size: 1.3rem;margin-top: 3px;}.add-sec .sec-top .open-btn, .add-sec .sec-top .close-btn{min-width: 127px;padding: .7rem 1.5rem;border-radius: .4rem;background-color: var(--ButtonColor);color: #FFF;font-weight: 400;font-size: .9rem;box-shadow: var(--ButtonShadow);cursor: pointer;transition: .5s;}.add-sec .sec-top .close-btn{display: none;}.add-sec .sec-top.edit-opened .open-btn{display: none;}.add-sec .sec-top.edit-opened .close-btn{display: inline-block;}.add-sec .sec-top .open-btn.close, .add-sec .sec-top .close-btn{background-color: var(--DangerButton);box-shadow: var(--DangerShadow);}.add-sec .sec-top .open-btn.close:hover, .add-sec .sec-top .close-btn:hover{background-color: var(--DangerButton);box-shadow: 0 0 25px 3px #ED5E6891;;}.add-sec .sec-top .open-btn .icon{display: inline-block;margin-right: 5px;}.add-sec .sec-top .open-btn .close-span{display: none;}.add-sec .sec-top .open-btn.close .add-span{display: none;}.add-sec .sec-top .open-btn.close .close-span, .add-sec .sec-top .close-btn .close-span{display: flex;justify-content: center;align-items: center;}.add-sec .sec-top .open-btn .add-span{display: flex;justify-content: center;align-items: center;}.add-sec .sec-top .open-btn:hover{box-shadow: 0 0 25px 3px #2643c491;}.add-sec .form{height:0;overflow:hidden;transition:height .5s ease-out;margin-bottom: 1.5rem;}.add-sec .form.open-form{height: 220px;}.add-sec .form .task-title{margin-bottom: 1.1rem;}.add-sec .form label{display: inline-block;margin-bottom: 5px;padding: 0 3px;}.add-sec .form .inpt{display: inline-block;width: 100%;min-height: 45px;padding: .6rem 1rem;border-radius: 5px;border: 1px solid #0631f1;background-color: #FFF;}.add-sec .form .task-info{display: flex;justify-content: space-between;align-items: center;flex-wrap: wrap;}.add-sec .form .half-div{flex-basis: 48%;width: 48%;min-width: 250px;margin-bottom: 1.1rem;}.add-sec .form .half-div:first-child{margin-right: 4%;}.add-sec .form .save-btn{display: inline-flex;justify-content: center;align-items: center;width: 100%;height: 45px;background-color: var(--ButtonColor);color: #FFF;font-size: 1rem;border-radius: .4rem;}.add-sec .form .save-btn .icon{margin-right: 5px;}.view-sec .tasks-info{display: flex;justify-content: space-between;align-items: center;margin-bottom: 1.2rem;}.tasks-info .sec-title{color: #8791b6;letter-spacing: .5px;font-size: 1.2rem;}.tasks-info .nums{font-size: 1.2rem;color: var(--ButtonColor);font-weight: bold;}.tasks-info .nums .from{display: inline-block;margin: 0 5px;font-weight: 500;color: var(--HeadingColor);}.view-sec .tasks-list{list-style-type: none;}.tasks-list .single-task{display: flex;background-color: #FFF;border-radius: 15px;overflow: hidden;margin: 10px 0;transition: background-color .5s ease, opacity .7s ease;}.single-task.completed {opacity: .4;}.tasks-list .single-task .done-btn {flex-basis: 8%;min-width: 40px;display: flex;justify-content: center;align-items: center;border: none;outline: none;background: none;border-right: 3px solid #D9DFF8;font-size: 1.25rem;cursor: pointer;color: #2643C4;padding: 7px;transition: color .5s ease, border-right .5s ease;}.single-task .not-done-icon {display: block;}.single-task .done-icon {display: none;}.single-task.completed .not-done-icon {display: none;}.single-task.completed .done-icon {display: block;}.tasks-list .single-task .task-details {flex-basis: 85%;padding: 1.3rem 10px 7px;border-right: 3px solid #D9DFF8;}.single-task .task-details .task-name {letter-spacing: 1px;margin-bottom: 0.3rem;transition: border-right .5s ease;}.single-task.completed .task-details .task-name {text-decoration: line-through;}.single-task .task-details .day-time{display: flex;justify-content: flex-end;align-items: center;font-size: .9rem;}.single-task .task-details .day-time .day, .single-task .task-details .day-time .time{display: flex;justify-content: center;align-items: center;}.single-task .task-details .day-time .day{margin-right: 0.6rem;}.single-task .task-details .day-time .icon{color: var(--ButtonColor);display: inline-block;margin-right: 0.3rem;}.tasks-list .single-task .edit-btn, .tasks-list .single-task .trash-btn {flex-basis: 7%;min-width: 40px;display: flex;justify-content: center;align-items: center;border: none;outline: none;background: none;color: #4b74ce;font-size: 1.25rem;cursor: pointer;padding: 7px;transition: color .5s ease;}.tasks-list .single-task .trash-btn {border-left: 3px solid #D9DFF8;color: #f03945;}.view-sec .no-item{margin-top: 3rem;text-align: center;}.view-sec .no-item .image-div{margin-bottom: 2.5rem;}.view-sec .no-item .image-div img{width: 100%;max-width: 300px;}.view-sec .no-item .title{font-size: 1.8rem;font-family: var(--HeadingFont);color: var(--ButtonColor);}
